--- a/leet-code/1/Makefile
+++ b/leet-code/1/Makefile
@@ -1,8 +1,8 @@
 CXX=c++
-CFLAGS=-std=c++17 -Wall -Wextra -Werror -I../utility
-NAME=121
+CFLAGS=-std=c++17 -Wall -Wextra -Werror -I../../utility
+NAME=1
 
-SRCS=121.cpp
+SRCS=1.cpp
 OBJS=$(SRCS:.cpp=.o)
 
 $(NAME): $(OBJS)
